--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -1,9 +1,40 @@
+/* import flexboxgrid */
+@import 'flexboxgrid.min.css';
+
+/* import fonts */
+@font-face {
+    font-family: 'Gotham Bold';
+    src: url('../fonts/gotham-bold.otf');
+}
+
+@font-face {
+    font-family: 'Gotham Medium';
+    src: url('../fonts/gotham-medium.otf');
+}
+
+@font-face {
+    font-family: 'Gotham Book';
+    src: url('../fonts/gotham-book.otf');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/open-sans-regular.otf');
+}
+
 /* general styles */
 html,
 body {
   margin: 0;
   padding: 0;
-  color: red;
+  color: #343434;
+  font-family: 'Gotham Book';
+}
+
+.row {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
 }
 
 ul {
@@ -14,22 +45,136 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  padding-top: 200px;
+.center {
+  text-align: center;
+}
+
+.center-margins {
+  margin: 0 auto;
+}
+
+.left {
+  text-align: left;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.white {
+  color: #fff;
+}
+
+.blue {
+  color: #008fff;
+}
+
+.orange {
+  color: #ffa800;
+}
+
+.purple {
+  color: #7e1fff;
+}
+
+.gray {
+  color: #343434;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.gap {
+  margin-top: 30px;
+}
+
+.white-box {
+  background: #fff;
+  border-radius: 30px;
+  box-shadow: 5px 5px 25px #5f5f5f;
+  padding: 50px;
+}
+
+.white-box-no-shadow {
+  background: #fff;
+  border-radius: 30px;
+  padding: 50px;
+}
+
+.orange-button {
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #ffa800;
+  border: 1px solid #ffa800;
+  padding: 10px 50px;
+  border-radius: 30px;
+}
+
+.blue-button {
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #008fff;
+  border: 1px solid #008fff;
+  padding: 10px 50px;
+  border-radius: 30px;
+}
+
+.purple-button {
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #7e1fff;
+  border: 1px solid #7e1fff;
+  padding: 10px 50px;
+  border-radius: 30px;
+}
+
+.orange-underline {
+  width: 335px;
+  height: 0;
+  border: 4px solid #ffa800;
+  border-radius: 10px;
+  margin: 20px auto;
+}
+
+.white-underline {
+  width: 155px;
+  height: 0;
+  border: 4px solid #fff;
+  border-radius: 10px;
+  margin: 20px auto;
 }
 
 /* main navigation styles */
 
 #menu-navbar {
-  position: absolute;
+  position: fixed;
   left: 0;
+  top: 0;
   width: 100%;
+  background: #008fff;
+  height: 70px;
+  line-height: 70px;
 }
 
 #menu-navbar li {
   /* position: relative; */
   display: inline-flex;
   margin: 0 10px;
+}
+
+#menu-navbar li a,
+#menu-navbar li a:visited {
+  color: #fff;
+  text-transform: uppercase;
 }
 
 /* #menu-navbar li a {
