--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -18,8 +18,18 @@
 }
 
 @font-face {
+    font-family: 'Gotham Light';
+    src: url('../fonts/gotham-light.otf');
+}
+
+@font-face {
     font-family: 'Open Sans';
     src: url('../fonts/open-sans-regular.otf');
+}
+
+@font-face {
+    font-family: 'Open Sans Light';
+    src: url('../fonts/open-sans-light.ttf');
 }
 
 /* general styles */
@@ -101,7 +111,11 @@ a {
   background: #fff;
   border-radius: 30px;
   box-shadow: 5px 5px 25px #5f5f5f;
-  padding: 50px;
+  padding: 20px 50px 30px 50px;
+  max-width: 400px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 10;
 }
 
 .white-box-no-shadow {
@@ -117,6 +131,8 @@ a {
   border: 1px solid #ffa800;
   padding: 10px 50px;
   border-radius: 30px;
+  font-family: 'Gotham Medium';
+  font-size: 14px;
 }
 
 .blue-button {
@@ -126,6 +142,8 @@ a {
   border: 1px solid #008fff;
   padding: 10px 50px;
   border-radius: 30px;
+  font-family: 'Gotham Medium';
+  font-size: 14px;
 }
 
 .purple-button {
@@ -135,6 +153,8 @@ a {
   border: 1px solid #7e1fff;
   padding: 10px 50px;
   border-radius: 30px;
+  font-family: 'Gotham Medium';
+  font-size: 14px;
 }
 
 .orange-underline {
@@ -155,15 +175,34 @@ a {
 
 /* main navigation styles */
 
-#menu-navbar {
+.main-navbar-menus {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   background: #008fff;
+  height: 100px;
+  line-height: 100px;
+}
+.menu-home-logo-menu-container {
+  position: absolute;
+  left: 80px;
+}
+
+.menu-home-logo-menu-container img {
+  height: 40px;
+  margin-top: 30px;
+}
+
+.menu-navbar-container {
+  position: absolute;
+  right: 80px;
+}
+
+/* #menu-navbar, #menu-home-logo-menu {
   height: 70px;
   line-height: 70px;
-}
+} */
 
 #menu-navbar li {
   /* position: relative; */
@@ -174,6 +213,7 @@ a {
 #menu-navbar li a,
 #menu-navbar li a:visited {
   color: #fff;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
@@ -198,4 +238,144 @@ a {
 
 #menu-navbar .sub-menu {
   width: 90vw;
+}
+
+@media (max-width: 1060px) {
+  .menu-home-logo-menu-container {
+    left: -20px;
+  }
+  .menu-navbar-container {
+    right: 20px;
+  }
+  #menu-navbar li a,
+  #menu-navbar li a:visited {
+    font-size: 12px;
+  }
+}
+
+
+
+/* homepage styles */
+.hero {
+  min-height: 150vh;
+  color: #fff;
+  padding: 110px 120px 0 120px;
+  background-image: url('../images/homepage/hero-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.hero h2 {
+  font-size: 60px;
+  font-family: 'Gotham Light';
+  padding: 0;
+}
+
+.hero h1 {
+  font-size: 80px;
+  font-family: 'Gotham Bold';
+  padding: 0;
+  margin-top: -40px;
+}
+
+.hero h4 {
+  font-family: 'Gotham Light';
+  font-size: 30px;
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+.hero p {
+  font-family: 'Open Sans Light';
+  font-size: 18px;
+  max-width: 950px;
+  margin: 0 auto;
+  margin-top: 40px;
+}
+
+.home .info-row {
+  margin-top: 100px;
+}
+
+.home .info-row img {
+  width: 90%;
+  margin: -40px auto 0 auto;
+}
+
+.home .info-row h3 {
+  font-size: 35px;
+  font-family: 'Gotham Light';
+}
+
+.home .info-row h4 {
+  font-size: 20px;
+  font-family: 'Gotham Medium';
+  line-height: 1.5;
+  margin-top: -15px;
+}
+
+.home .info-row p {
+  font-family: 'Open Sans Light';
+  line-height: 2;
+  font-size: 15px;
+}
+
+.home .info-row p:nth-of-type(1) {
+  margin-top: -10px;
+}
+
+.funnel-section {
+  min-height: 120vh;
+  background-image: url('../images/homepage/lower-home-bg.png');
+  position: relative;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  margin-top: -400px;
+  padding-top: 600px;
+}
+
+.funnel-section h2.white,
+.funnel-section h3.white{
+  font-family: 'Gotham Light';
+}
+
+.funnel-section h2.white {
+  font-size: 32px;
+}
+
+.funnel-section h3.white {
+  font-size: 18px;
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
+
+.funnel-section .white-box-row {
+  padding: 0 120px;
+}
+
+.funnel-section .white-box-no-shadow {
+  min-height: 290px;
+  padding: 40px 0;
+}
+
+.funnel-section .white-box-no-shadow img {
+  height: 120px;
+  width: auto;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.funnel-section .white-box-no-shadow h3 {
+  font-size: 26px;
+}
+
+.home .info-row .map {
+  display: block;
+  width: 80%;
+  margin: 60px auto 100px auto !important;
+  min-width: 290px;
+  max-width: 1150px;
 }
