--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -598,3 +598,15 @@ a {
     margin-top: 30px;
   }
 }
+
+
+/* footer styles */
+
+footer {
+  background: #343434;
+  color: #fff;
+}
+
+.footer-bottom-row {
+  background: #464646;
+}
