--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -186,13 +186,13 @@ a {
   margin: 80px auto 40px auto;
 }
 
+/* get to know us dropdown navigation styles */
 
-/* dropdown navigation styles */
-
-.lead-solutions-menus-container {
+.get-to-know-us-menus-container {
   position: relative;
   margin-top: 100px;
   line-height: 2;
+  padding-top: 50px;
   padding-bottom: 50px;
   min-height: 380px;
   z-index: 100000;
@@ -202,20 +202,149 @@ a {
   background: #fff;
 }
 
-.arrow-up {
+.arrow-up-1 {
+  position: absolute;
+  right: 680px;
+  top: -15px;
+  z-index: 10000;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 15px solid white;
+}
+
+@media (max-width: 1060px) {
+  .arrow-up-1 {
+    right: 555px;
+  }
+}
+
+.get-to-know-us-menus-container p.gray {
+  font-family: 'Gotham Book';
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.get-to-know-us-menus-container h3.blue {
+  font-size: 20px;
+  font-family: 'Gotham Book';
+}
+
+#menu-get-to-know-us-image-menu {
+  padding: 0;
+}
+
+#menu-get-to-know-us-image-menu li {
+  display: inline-flex !important;
+}
+
+#menu-get-to-know-us-image-menu .team-card-small {
+  width: 143px !important;
+  margin: 5px;
+  height: 210px !important;
+  line-height: 1 !important;
+}
+
+#menu-get-to-know-us-image-menu .team-card-small .team-card-text {
+  padding-top: 120px !important;
+}
+
+#menu-get-to-know-us-image-menu .team-card-small .team-card-text .white-underline {
+  width: 90px;
+  border: 2px solid #fff;
+  margin-bottom: -3px;
+}
+
+#menu-get-to-know-us-image-menu .team-card-small .team-card-text p {
+  font-size: 12px !important;
+}
+
+.join-us-container {
+  width: 620px;
+}
+
+.join-us-container h3.blue {
+  float: left;
+}
+
+.join-us-container ul {
+  float: right;
+}
+
+#menu-item-202 a,
+#menu-item-212 a {
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #ffa800;
+  border: 1px solid #ffa800;
+  padding: 15px 25px 12px 25px;
+  border-radius: 30px;
+  font-family: 'Gotham Medium';
+  font-size: 14px;
+}
+
+@media (min-width: 1150px) {
+  .get-to-know-us-menus-container .row {
+    padding: 0 80px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .get-to-know-us-menus-container .row {
+    padding: 0 150px;
+  }
+}
+
+@media (min-width: 1800px) {
+  .get-to-know-us-menus-container .row {
+    padding: 0 250px;
+  }
+}
+
+@media (min-width: 2200px) {
+  .get-to-know-us-menus-container .row {
+    padding: 0 350px;
+  }
+}
+
+
+
+
+
+
+
+
+/* lead solutions dropdown navigation styles */
+
+.lead-solutions-menus-container {
+  position: relative;
+  margin-top: 100px;
+  line-height: 2;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  min-height: 380px;
+  z-index: 100000;
+  position: absolute;
+  top: -9999999px;
+  opacity: 0;
+  background: #fff;
+}
+
+.arrow-up-2 {
   position: absolute;
   right: 420px;
   top: -15px;
   z-index: 10000;
   width: 0;
   height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
   border-bottom: 15px solid white;
 }
 
 @media (max-width: 1060px) {
-  .arrow-up {
+  .arrow-up-2 {
     right: 320px;
   }
 }
@@ -438,9 +567,6 @@ a {
   opacity: 1;
 }
 
-.hidden {
-  opacity: 0;
-}
 
 
 /* #menu-item-24:hover ~ .lead-solutions-menus-container {
