--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -635,12 +635,12 @@ a {
 }
 
 
-/* hero carousel */
+/* hero section */
 
 .hero {
   min-height: 150vh;
   color: #fff;
-  padding: 110px 120px 0 120px;
+  padding: 110px 0 0 0;
   background-image: url('../images/homepage/hero-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -649,7 +649,7 @@ a {
 
 @media (max-width: 992px) {
   .hero {
-    padding: 110px 40px 0 40px;
+    padding: 110px 15px 0 15px;
   }
 }
 
@@ -670,6 +670,7 @@ a {
   font-family: 'Gotham Light';
   font-size: 30px;
   max-width: 950px;
+  min-width: 270px;
   margin: 0 auto;
 }
 
@@ -677,9 +678,535 @@ a {
   font-family: 'Open Sans Light';
   font-size: 18px;
   max-width: 950px;
+  min-width: 270px;
   margin: 0 auto;
   margin-top: 40px;
 }
+
+
+
+/* hero carousel */
+
+.content-slider {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 40px;
+}
+
+.slider {
+  height: 100px;
+  width: 100%;
+  margin: -40px auto 40px auto;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+
+.mask {
+  overflow: hidden;
+  height: 100px;
+}
+
+.slider ul {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.slider li {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  top: -105px;
+  list-style: none;
+}
+
+.slider .quote {
+  font-size: 70px;
+  font-family: 'Gotham Bold';
+}
+
+@media (max-width: 1355px) {
+  .slider .quote {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 1005px) {
+  .slider .quote {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 650px) {
+  .hero h2 {
+    font-size: 40px;
+    margin-bottom: 50px;
+  }
+  .hero h4 {
+    font-size: 25px;
+  }
+  .hero p {
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  .slider .quote {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 500px) {
+  .hero h2 {
+    font-size: 30px;
+  }
+  .hero h4 {
+    font-size: 20px;
+  }
+  .hero p {
+    font-size: 14px;
+    line-height: 1.8;
+    margin-top: 20px;
+  }
+  .slider .quote {
+    font-size: 30px;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .hero h2 {
+    font-size: 25px;
+  }
+  .hero h4 {
+    font-size: 18px;
+  }
+  .hero p {
+    font-size: 14px;
+    line-height: 1.8;
+    margin-top: 20px;
+  }
+  .slider .quote {
+    font-size: 25px;
+  }
+}
+
+.slider .source {
+  font-size: 20px;
+  text-align: right;
+}
+
+.slider li.anim1 {
+  -moz-animation: cycle 15s linear infinite;
+  -webkit-animation: cycle 15s linear infinite;
+  animation: cycle 15s linear infinite;
+}
+
+.slider li.anim2 {
+  -moz-animation: cycle2 15s linear infinite;
+  -webkit-animation: cycle2 15s linear infinite;
+  animation: cycle2 15s linear infinite;
+}
+
+.slider li.anim3 {
+  -moz-animation: cycle3 15s linear infinite;
+  -webkit-animation: cycle3 15s linear infinite;
+  animation: cycle3 15s linear infinite;
+}
+
+.slider li.anim4 {
+  -moz-animation: cycle4 15s linear infinite;
+  -webkit-animation: cycle4 15s linear infinite;
+  animation: cycle4 15s linear infinite;
+}
+
+.slider li.anim5 {
+  -moz-animation: cycle5 15s linear infinite;
+  -webkit-animation: cycle5 15s linear infinite;
+  animation: cycle5 15s linear infinite;
+}
+
+.slider:hover li {
+  -moz-animation-play-state: paused;
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+}
+
+@-moz-keyframes cycle {
+  0% {
+    top: 0px;
+  }
+  4% {
+    top: 0px;
+  }
+  16% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  20% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  21% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  92% {
+    top: -325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  96% {
+    top: -325px;
+    opacity: 0;
+  }
+  100% {
+    top: 0px;
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes cycle2 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  16% {
+    top: -325px;
+    opacity: 0;
+  }
+  20% {
+    top: 0px;
+    opacity: 1;
+  }
+  24% {
+    top: 0px;
+    opacity: 1;
+  }
+  36% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  40% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  41% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-moz-keyframes cycle3 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  36% {
+    top: -325px;
+    opacity: 0;
+  }
+  40% {
+    top: 0px;
+    opacity: 1;
+  }
+  44% {
+    top: 0px;
+    opacity: 1;
+  }
+  56% {
+    top: 0px;
+    opacity: 1;
+  }
+  60% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  61% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-moz-keyframes cycle4 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  56% {
+    top: -325px;
+    opacity: 0;
+  }
+  60% {
+    top: 0px;
+    opacity: 1;
+  }
+  64% {
+    top: 0px;
+    opacity: 1;
+  }
+  76% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  80% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  81% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-moz-keyframes cycle5 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  76% {
+    top: -325px;
+    opacity: 0;
+  }
+  80% {
+    top: 0px;
+    opacity: 1;
+  }
+  84% {
+    top: 0px;
+    opacity: 1;
+  }
+  96% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  100% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+}
+
+@-webkit-keyframes cycle {
+  0% {
+    top: 0px;
+  }
+  4% {
+    top: 0px;
+  }
+  16% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  20% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  21% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  50% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  92% {
+    top: -325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  96% {
+    top: -325px;
+    opacity: 0;
+  }
+  100% {
+    top: 0px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes cycle2 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  16% {
+    top: -325px;
+    opacity: 0;
+  }
+  20% {
+    top: 0px;
+    opacity: 1;
+  }
+  24% {
+    top: 0px;
+    opacity: 1;
+  }
+  36% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  40% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  41% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-webkit-keyframes cycle3 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  36% {
+    top: -325px;
+    opacity: 0;
+  }
+  40% {
+    top: 0px;
+    opacity: 1;
+  }
+  44% {
+    top: 0px;
+    opacity: 1;
+  }
+  56% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  60% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  61% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-webkit-keyframes cycle4 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  56% {
+    top: -325px;
+    opacity: 0;
+  }
+  60% {
+    top: 0px;
+    opacity: 1;
+  }
+  64% {
+    top: 0px;
+    opacity: 1;
+  }
+  76% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  80% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+  81% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+  100% {
+    top: -325px;
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@-webkit-keyframes cycle5 {
+  0% {
+    top: -325px;
+    opacity: 0;
+  }
+  76% {
+    top: -325px;
+    opacity: 0;
+  }
+  80% {
+    top: 0px;
+    opacity: 1;
+  }
+  84% {
+    top: 0px;
+    opacity: 1;
+  }
+  96% {
+    top: 0px;
+    opacity: 1;
+    z-index: 0;
+  }
+  100% {
+    top: 325px;
+    opacity: 0;
+    z-index: 0;
+  }
+}
+
+
+
+
+
+
+
 
 
 
@@ -742,6 +1269,12 @@ a {
 
 .info-row-mobile .white-box.white-box-no-margins{
   margin-top: 400px;
+}
+
+@media (max-width: 767px) {
+  .info-row-mobile .white-box.white-box-no-margins{
+    margin-top: 300px;
+  }
 }
 
 @media (min-width: 993px) {
@@ -1139,4 +1672,144 @@ footer p.address {
   footer {
     display: none;
   }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* mobile icons carousel */
+
+
+
+.icons-carousel {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .icons-carousel {
+    display: block;
+  }
+  .map {
+    padding-bottom: 80px;
+  }
+  .icons-row {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  /* .icons-row {
+    display: inline-block;
+  } */
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#carousel {
+  position: relative;
+  height: 200px;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: hidden;
+  text-align: center;
+}
+#carousel div {
+  position: absolute;
+  transition: transform 1s, left 1s, opacity 1s, z-index 0s;
+  opacity: 1;
+}
+#carousel div img {
+  width: 100px;
+  transition: width 1s;
+}
+#carousel div.hideLeft {
+  left: 0%;
+  opacity: 0;
+  transform: translateY(50%) translateX(-50%);
+}
+#carousel div.hideLeft img {
+  width: 50px;
+}
+#carousel div.hideRight {
+  left: 100%;
+  opacity: 0;
+  transform: translateY(50%) translateX(-50%);
+}
+#carousel div.hideRight img {
+  width: 50px;
+}
+#carousel div.prev {
+  z-index: 5;
+  left: 15%;
+  transform: translateY(50px) translateX(-50%);
+  opacity: 0.7;
+}
+#carousel div.prev img {
+  width: 100px;
+}
+#carousel div.prevLeftSecond {
+  z-index: 4;
+  left: 0%;
+  transform: translateY(50%) translateX(-50%);
+  opacity: 0;
+}
+#carousel div.prevLeftSecond img {
+  width: 50px;
+}
+#carousel div.selected {
+  z-index: 10;
+  left: 50%;
+  transform: translateY(0px) translateX(-50%);
+}
+#carousel div.next {
+  z-index: 5;
+  left: 85%;
+  transform: translateY(50px) translateX(-50%);
+  opacity: 0.7;
+}
+#carousel div.next img {
+  width: 100px;
+}
+#carousel div.nextRightSecond {
+  z-index: 4;
+  left: 100%;
+  transform: translateY(50%) translateX(-50%);
+  opacity: 0;
+}
+#carousel div.nextRightSecond img {
+  width: 50px;
+}
+
+.buttons {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 10px;
 }
